test/e2e/kubernetes/workloads/policies/client-one-allow-egress-server-policy.yaml
# This network policy blocks all egress traffic from pods with label role=client-one
# except for traffic going to pods with label role=server.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: client-one
  name: client-one-allow-egress-server
spec:
  podSelector:
    matchLabels:
      role: client-one
  egress:
  - to:
    - podSelector:
        matchLabels:
          role: server
