test/e2e/kubernetes/workloads/policies/client-one-deny-egress-policy.yaml
# This network policy blocks egress traffic from all pods in namespace client-one.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: client-one
  name: client-one-deny-egress
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Egress
