test/e2e/kubernetes/workloads/policies/client-one-deny-ingress-policy.yaml
# This network policy blocks ingress traffic to all pods in namespace client-one.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: client-one
  name: client-one-deny-ingress
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
