test/e2e/kubernetes/workloads/policies/default-deny-ingress-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
